--- a/CleanBlog/Areas/Admin/Views/User/Login.cshtml
+++ b/CleanBlog/Areas/Admin/Views/User/Login.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model CleanBlog.ViewModels.LoginVM
+
 @{
     Layout = null;
 }
@@ -45,20 +46,30 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Hoşgeldin!</h1>
                                     </div>
-                                    <form class="user">
+                                    <form class="user" method="post" asp-action="Login">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                   id="exampleInputEmail" aria-describedby="emailHelp"
-                                                   placeholder="E-Posta">
+                                            <input asp-for="Username" type="text" class="form-control form-control-user"
+                                                   placeholder="Kullanıcı Adı">
+                                        <span asp-validation-for="Username" class="text-danger"></span>
                                         </div>
+
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
+                                            <input asp-for="Password"  type="password" class="form-control form-control-user"
                                                    id="exampleInputPassword" placeholder="Şifre">
+                                            <span asp-validation-for="Password" class="text-danger"></span>
+
                                         </div>
-                                    
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                            Giriş Yap
-                                        </a>
+
+                                        <div  class="form-group">
+                                            <div class="custom-control custom-checkbox small">
+                                                <input asp-for="RememberMe"  type="checkbox" class="custom-control-input" id="customCheck">
+                                                <label class="custom-control-label" for="customCheck">
+                                                    Beni Hatırla
+                                                </label>
+                                            </div>
+                                        </div>
+
+                                        <input type="submit" class="btn btn-primary btn-user btn-block" value="Giriş Yap">
                                       
                                     </form>
                                     <hr>
@@ -80,6 +91,8 @@
 
     </div>
 
+
+
     <!-- Bootstrap core JavaScript-->
     <script src="~/AdminTemplate/vendor/jquery/jquery.min.js"></script>
     <script src="~/AdminTemplate/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -89,6 +102,8 @@
 
     <!-- Custom scripts for all pages-->
     <script src="~/AdminTemplate/js/sb-admin-2.min.js"></script>
+    @await Component.InvokeAsync("Notyf")
+
 
 </body>
 
