--- a/CleanBlog/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CleanBlog/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,6 +1,14 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@using Microsoft.AspNetCore.Identity;
+@model CleanBlog.Models.ApplicationUser
+@inject UserManager<ApplicationUser> _userManager;
+@{
+    var loggedInUser = new ApplicationUser();
+    loggedInUser = _userManager.Users?.FirstOrDefault(x => x.UserName==User.Identity!.Name);
+}
 
+<!DOCTYPE html>
+<html lang="en">
+     
 <head>
 
     <meta charset="utf-8">
@@ -276,7 +284,9 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">
+                                    @loggedInUser?.FirstName @loggedInUser?.LastName
+                                </span>
                                 <img class="img-profile rounded-circle"
                                      src="~/AdminTemplate/img/undraw_profile.svg">
                             </a>
@@ -296,10 +306,12 @@
                                     Activity Log
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                <form asp-action="Logout" asp-asp-controller="User" asp-asp-area="Admin" method="post">
+                                <button type="sumbit" class="dropdown-item" href="#" >
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
-                                </a>
+                                    Çıkış Yap
+                                </button>
+                                </form>
                             </div>
                         </li>
 
@@ -328,7 +340,6 @@
 
     </div>
 
-    @await Component.InvokeAsync("Notyf")
     <!-- End of Page Wrapper -->
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
@@ -372,6 +383,8 @@
     <script src="~/AdminTemplate/js/demo/chart-area-demo.js"></script>
     <script src="~/AdminTemplate/js/demo/chart-pie-demo.js"></script>
     @await RenderSectionAsync("scripts",required:false)
+    @await Component.InvokeAsync("Notyf")
+
 
 </body>
 
