Asp.Net Core  6 MVC (Add User)

--- a/CleanBlog/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CleanBlog/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Identity;
-@model CleanBlog.Models.ApplicationUser
 @inject UserManager<ApplicationUser> _userManager;
 @{
     var loggedInUser = new ApplicationUser();
@@ -306,11 +305,11 @@
                                     Activity Log
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <form asp-action="Logout" asp-asp-controller="User" asp-asp-area="Admin" method="post">
-                                <button type="sumbit" class="dropdown-item" href="#" >
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Çıkış Yap
-                                </button>
+                                <form asp-action="Logout" asp-controller="User" asp-area="Admin" method="post">
+                                    <button type="submit" class="dropdown-item">
+                                        <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                        Logout
+                                    </button>
                                 </form>
                             </div>
                         </li>
