--- a/CleanBlog/Areas/Admin/Views/User/Login.cshtml
+++ b/CleanBlog/Areas/Admin/Views/User/Login.cshtml
@@ -1,111 +1,62 @@
 ﻿@model CleanBlog.ViewModels.LoginVM
 
 @{
-    Layout = null;
+    Layout = "_LoginLayout";
+    ViewData["Title"] = "Login";
 }
 
-<!DOCTYPE html>
-<html lang="en">
+<!-- Outer Row -->
+<div class="row justify-content-center">
 
-<head>
+    <div class="col-xl-10 col-lg-12 col-md-9">
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Giriş Yap - Admin</title>
-
-    <!-- Custom fonts for this template-->
-    <link href="~/AdminTemplate/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-          rel="stylesheet">
-
-    <!-- Custom styles for this template-->
-    <link href="~/AdminTemplate/css/sb-admin-2.min.css" rel="stylesheet">
-
-</head>
-
-<body class="bg-gradient-primary">
-
-    <div class="container">
-
-        <!-- Outer Row -->
-        <div class="row justify-content-center">
-
-            <div class="col-xl-10 col-lg-12 col-md-9">
-
-                <div class="card o-hidden border-0 shadow-lg my-5">
-                    <div class="card-body p-0">
-                        <!-- Nested Row within Card Body -->
-                        <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                            <div class="col-lg-6">
-                                <div class="p-5">
-                                    <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Hoşgeldin!</h1>
-                                    </div>
-                                    <form class="user" method="post" asp-action="Login">
-                                        <div class="form-group">
-                                            <input asp-for="Username" type="text" class="form-control form-control-user"
-                                                   placeholder="Kullanıcı Adı">
-                                        <span asp-validation-for="Username" class="text-danger"></span>
-                                        </div>
-
-                                        <div class="form-group">
-                                            <input asp-for="Password"  type="password" class="form-control form-control-user"
-                                                   id="exampleInputPassword" placeholder="Şifre">
-                                            <span asp-validation-for="Password" class="text-danger"></span>
-
-                                        </div>
-
-                                        <div  class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <input asp-for="RememberMe"  type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">
-                                                    Beni Hatırla
-                                                </label>
-                                            </div>
-                                        </div>
-
-                                        <input type="submit" class="btn btn-primary btn-user btn-block" value="Giriş Yap">
-                                      
-                                    </form>
-                                    <hr>
-                                    <div class="text-center">
-                                        <a class="small" href="forgot-password.html">Şiremi Unutum!</a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a class="small" href="register.html">Hesapım Yok Oluştur!</a>
+        <div class="card o-hidden border-0 shadow-lg my-5">
+            <div class="card-body p-0">
+                <!-- Nested Row within Card Body -->
+                <div class="row">
+                    <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                    <div class="col-lg-6">
+                        <div class="p-5">
+                            <div class="text-center">
+                                <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                            </div>
+                            <form class="user" method="post" asp-action="Login">
+                                <div class="form-group">
+                                    <input asp-for="Username" type="text" class="form-control form-control-user"
+                                           id="exampleInputEmail" aria-describedby="emailHelp"
+                                           placeholder="Enter Username...">
+                                      <span asp-validation-for="Username" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <input asp-for="Password" type="password" class="form-control form-control-user"
+                                           id="exampleInputPassword" placeholder="Password">
+                                    <span asp-validation-for="Password" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <div class="custom-control custom-checkbox small">
+                                        <input asp-for="RememberMe" type="checkbox" class="custom-control-input" id="customCheck">
+                                        <label class="custom-control-label" for="customCheck">
+                                            Remember
+                                            Me
+                                        </label>
                                     </div>
                                 </div>
+                                <input type="submit" class="btn btn-primary btn-user btn-block" value="Login">
+                                
+                            </form>
+                            <hr>
+                            <div class="text-center">
+                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                            </div>
+                            <div class="text-center">
+                                <a class="small" href="register.html">Create an Account!</a>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
 
     </div>
 
-
-
-    <!-- Bootstrap core JavaScript-->
-    <script src="~/AdminTemplate/vendor/jquery/jquery.min.js"></script>
-    <script src="~/AdminTemplate/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="~/AdminTemplate/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="~/AdminTemplate/js/sb-admin-2.min.js"></script>
-
-    @await Component.InvokeAsync("Notyf")
-
-
-</body>
-
-</html>
+</div>
