--- a/CleanBlog/Areas/Admin/Views/Post/Index.cshtml
+++ b/CleanBlog/Areas/Admin/Views/Post/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="container-fluid">
-    <a class="btn btn-primary mb-1" >Add Post</a>
+    <a class="btn btn-primary mb-1" href="/Admin/Post/Create">Add Post</a>
     <div class="card">
         <div class="card-header bg-primary">
             <h4 class="card-title text-white">List of Users</h4>
