Asp.Net Core 6 MVC (Create Post)

--- a/CleanBlog/Areas/Admin/Views/Post/Create.cshtml
+++ b/CleanBlog/Areas/Admin/Views/Post/Create.cshtml
@@ -31,9 +31,11 @@
                             <span asp-validation-for="Description" class="text-danger"></span>
                         </div>
                     </div>
-                    <div class="col-3 ">
-                        <img src="https://cdn.pnghd.pics/data/787/picture-icon-png-0.jpg" class="img-fluid mt-4" id="thumbnail" />
-                        <div>
+                    <div class="col-3">
+                        <div class="mb-2">
+                            <img src="    https://cdn.pnghd.pics/data/787/picture-icon-png-0.jpg" class="img-fluid" id="thumbnail" />
+                        </div>
+                        <div class="mb-2">
                             <label>Thumbnail</label>
                             <input type="file" asp-for="Thumbnail" class="custom-file" />
                             <span asp-validation-for="Description" class="text-danger"></span>
@@ -48,3 +50,5 @@
         </div>
     </div>
 </div>
+
+                        
