--- a/CleanBlog/Areas/Admin/Views/Post/Index.cshtml
+++ b/CleanBlog/Areas/Admin/Views/Post/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model List<CleanBlog.ViewModels.PostVM>
+
+@{
     ViewData["Title"] = "Kullancı Ekleme";
 }
 
@@ -9,6 +11,31 @@
             <h4 class="card-title text-white">List of Users</h4>
         </div>
         <div class="card-body">
-          
+            <table class="table table-striped table-hover" id="myTable">
+                <thead>
+                    <tr>
+                        <th>Resim</th>
+                        <th>Başlık</th>
+                        <th>Tarih</th>
+                        <th>Gönderen Adı</th>
+                        <th>Ayarlar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var post in Model)
+                    {
+                        <tr>
+                            <td><img class="img-fluid" style="width:100px;" src="~/thumbnails/@post.ThumbnailUrl" /></td>
+                            <td>@post.Title</td>
+                            <td>@post.CreatedDate</td>
+                            <td>@post.AuthorName</td>
+                            <td>
+                                <a class="btn btn-danger" asp-action="ResetPassword" asp-controller="User" asp-route-id="@post.Id">Delete</a>
+                                <a class="btn btn-info" asp-action="ResetPassword" asp-controller="User" asp-route-id="@post.Id">Edit</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </div>
-    </div>
+ </div>
