Asp.Net Core 6 MVC (Page Edit)

--- a/CleanBlog/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CleanBlog/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -80,10 +80,10 @@
                          data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
                             <h6 class="collapse-header">Custom Utilities:</h6>
-                            <a class="collapse-item" href="utilities-color.html">Ana Sayfa</a>
-                            <a class="collapse-item" href="utilities-border.html">Hakkımda</a>
-                            <a class="collapse-item" href="utilities-animation.html">iletişim</a>
-                            <a class="collapse-item" href="utilities-other.html">Gizlilik Politikası</a>
+                            <a class="collapse-item" href="/Admin/Page/Index">Ana Sayfa</a>
+                            <a class="collapse-item" href="/Admin/Page/about">Hakkımda</a>
+                            <a class="collapse-item" href="/Admin/Page/contact">iletişim</a>
+                            <a class="collapse-item" href="/Admin/Page/privacy">Gizlilik Politikası</a>
                         </div>
                     </div>
                 </li>
