--- a/CleanBlog/Views/Page/About.cshtml
+++ b/CleanBlog/Views/Page/About.cshtml
@@ -1,14 +1,27 @@
-﻿@{
+﻿@model CleanBlog.ViewModels.PageVM
+
+@{
     ViewData["Title"] = "Hakkımda";
+
+    string pageThumbnail = "";
+
+    if(Model.ThumbnailUrl == null)
+    {
+        pageThumbnail = "/Template/assets/img/about-bg.jpg";
+    }
+    else
+    {
+        pageThumbnail = Model.ThumbnailUrl;
+    }
 }
 
-<header class="masthead" style="background-image: url('/Template/assets/img/about-bg.jpg')">
+<header class="masthead" style="background-image: url('/thumbnails/@pageThumbnail')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="page-heading">
-                    <h1>About Me</h1>
-                    <span class="subheading">This is what I do.</span>
+                    <h1>@Html.Raw(Model.Title)</h1>
+                    <span class="subheading">@Html.Raw(Model.Title)</span>
                 </div>
             </div>
         </div>
@@ -19,9 +32,7 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                @Model.Description
             </div>
         </div>
     </div>
