Admin Panel Header Page

--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
 
-                        <a class="collapse-item" href="buttons.html">Header</a>
+                        <a class="collapse-item" href="/admin/header">Header</a>
                         <a class="collapse-item" href="cards.html">Home</a>
                         <a class="collapse-item" href="cards.html">Populer Post</a>
                         <a class="collapse-item" href="cards.html">Contact</a>
