--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Header/Index.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Header/Index.cshtml
@@ -1,31 +1,33 @@
 ﻿
+
 <div class="col-md-8 mx-auto">
-    <form>
+    <form method="post" >
+        <input type="text" class="form-control" name="Id" value="@Model.Id">
+
         <div class="form-group">
             <label>TITLE</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" name="Title" value="@Model.Title">
         </div>
 
         <div class="form-group">
-            <label >Munu 1</label>
-            <input type="text" class="form-control">
+            <label >MENU 1</label>
+            <input type="text" class="form-control" name="Menu1" value="@Model.Menu1">
         </div>
 
         <div class="form-group">
-            <label>Munu 2</label>
-            <input type="text" class="form-control">
+            <label>MENU 2</label>
+            <input type="text" class="form-control" name="Menu2" value="@Model.Menu2">
         </div>
 
         <div class="form-group">
-            <label>Munu 3</label>
-            <input type="text" class="form-control">
+            <label>MENU 3</label>
+            <input type="text" class="form-control" name="Menu3" value="@Model.Menu3">
         </div>
 
         <div class="form-group">
-            <label>Munu 4</label>
-            <input type="text" class="form-control">
+            <label>MENU 4</label>
+            <input type="text" class="form-control" name="Menu4" value="@Model.Menu4">
         </div>
-
 
       
         <button type="submit" class="btn btn-primary w-100">UPDATE</button>
