Admin Panel Footer Settings Page

--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Header/Index.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Header/Index.cshtml
@@ -2,7 +2,7 @@
 
 <div class="col-md-8 mx-auto">
     <form method="post" >
-        <input type="text" class="form-control" name="Id" value="@Model.Id">
+        <input type="hidden" class="form-control" name="Id" value="@Model.Id">
 
         <div class="form-group">
             <label>TITLE</label>
