--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                         <a class="collapse-item" href="cards.html">Home</a>
                         <a class="collapse-item" href="cards.html">Populer Post</a>
                         <a class="collapse-item" href="cards.html">Contact</a>
-                        <a class="collapse-item" href="cards.html">Footer</a>
+                        <a class="collapse-item" href="/admin/footer">Footer</a>
                     </div>
                 </div>
             </li>
