--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Footer/Index.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Footer/Index.cshtml
@@ -6,22 +6,22 @@
 
         <div class="form-group">
             <label>LINK 1</label>
-            <input type="text" class="form-control" name="Link1" value="@Model.Link1">
+            <input type="text" class="form-control" name="Link1" value="@Model.Link1" required>
         </div>
 
         <div class="form-group">
             <label>LINK 2</label>
-            <input type="text" class="form-control" name="Link2" value="@Model.Link2">
+            <input type="text" class="form-control" name="Link2" value="@Model.Link2" required>
         </div>
 
         <div class="form-group">
             <label>LINK 3</label>
-            <input type="text" class="form-control" name="Link3" value="@Model.Link3">
+            <input type="text" class="form-control" name="Link3" value="@Model.Link3" required>
         </div>
 
         <div class="form-group">
             <label>TITLE</label>
-            <input type="text" class="form-control" name="Title" value="@Model.Title">
+            <input type="text" class="form-control" name="Title" value="@Model.Title" required>
         </div>
 
 
