--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Header/Index.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Header/Index.cshtml
@@ -6,27 +6,27 @@
 
         <div class="form-group">
             <label>TITLE</label>
-            <input type="text" class="form-control" name="Title" value="@Model.Title">
+            <input type="text" class="form-control" name="Title" value="@Model.Title" required>
         </div>
 
         <div class="form-group">
             <label >MENU 1</label>
-            <input type="text" class="form-control" name="Menu1" value="@Model.Menu1">
+            <input type="text" class="form-control" name="Menu1" value="@Model.Menu1" required>
         </div>
 
         <div class="form-group">
             <label>MENU 2</label>
-            <input type="text" class="form-control" name="Menu2" value="@Model.Menu2">
+            <input type="text" class="form-control" name="Menu2" value="@Model.Menu2" required>
         </div>
 
         <div class="form-group">
             <label>MENU 3</label>
-            <input type="text" class="form-control" name="Menu3" value="@Model.Menu3">
+            <input type="text" class="form-control" name="Menu3" value="@Model.Menu3" required>
         </div>
 
         <div class="form-group">
             <label>MENU 4</label>
-            <input type="text" class="form-control" name="Menu4" value="@Model.Menu4">
+            <input type="text" class="form-control" name="Menu4" value="@Model.Menu4" required>
         </div>
 
       
