--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Page/Contact.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Page/Contact.cshtml
@@ -1,12 +1,30 @@
-﻿
+﻿@model Page
 
-<!DOCTYPE html>
+<div class="col-md-8 mx-auto">
+    <form method="post">
+        <input type="hidden" class="form-control" name="Id" value="@Model.Id">
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Contact</title>
-</head>
-<body>
-</body>
-</html>
+        <div class="form-group">
+            <label>PİCTURE</label>
+            <input type="text" class="form-control" name="img" value="@Model.img" required>
+        </div>
+
+        <div class="form-group">
+            <label>BIG TITLE</label>
+            <input type="text" class="form-control" name="BigTitle" value="@Model.BigTitle" required>
+        </div>
+
+        <div class="form-group">
+            <label>SMALL TITLE</label>
+            <input type="text" class="form-control" name="SmallTitle" value="@Model.SmallTitle" required>
+        </div>
+
+        <div class="form-group">
+            <label>DESCRIPTION</label>
+            <textarea type="text" rows="4" class="form-control" name="Description"  required>@Model.Description</textarea>
+        </div>
+
+
+        <button type="submit" class="btn btn-primary w-100">UPDATE</button>
+    </form>
+</div>
