--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Page/Populer.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Page/Populer.cshtml
@@ -1,4 +1,25 @@
-﻿
+﻿@model Page
 
-<h1>Populer</h1>
+<div class="col-md-8 mx-auto">
+    <form method="post">
+        <input type="hidden" class="form-control" name="Id" value="@Model.Id">
 
+        <div class="form-group">
+            <label>PİCTURE</label>
+            <input type="text" class="form-control" name="img" value="@Model.img" required>
+        </div>
+
+        <div class="form-group">
+            <label>BIG TITLE</label>
+            <input type="text" class="form-control" name="BigTitle" value="@Model.BigTitle" required>
+        </div>
+
+        <div class="form-group">
+            <label>SMALL TITLE</label>
+            <input type="text" class="form-control" name="SmallTitle" value="@Model.SmallTitle" required>
+        </div>
+
+
+        <button type="submit" class="btn btn-primary w-100">UPDATE</button>
+    </form>
+</div>
