--- a/Clean_Blog/Clean_Blog/Views/Contact/Index.cshtml
+++ b/Clean_Blog/Clean_Blog/Views/Contact/Index.cshtml
@@ -1,16 +1,13 @@
-﻿
-@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+﻿@model Page
 
 <!-- Page Header-->
-<header class="masthead" style="background-image: url('/assets/img/contact-bg.jpg')">
+<header class="masthead" style="background-image: url('@Model.img')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="page-heading">
-                    <h1>Contact Me</h1>
-                    <span class="subheading">Have questions? I have answers.</span>
+                    <h1>@Model.BigTitle</h1>
+                    <span class="subheading">@Model.SmallTitle</span>
                 </div>
             </div>
         </div>
@@ -21,7 +18,7 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+                <p>@Model.Description</p>
                 <div class="my-5">
                     <!-- * * * * * * * * * * * * * * *-->
                     <!-- * * SB Forms Contact Form * *-->
