--- a/Clean_Blog/Clean_Blog/Views/Popular/Index.cshtml
+++ b/Clean_Blog/Clean_Blog/Views/Popular/Index.cshtml
@@ -1,21 +1,13 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
+﻿@model Page
 
 <!-- Page Header-->
-<header class="masthead" style="background-image: url('/assets/img/post-bg.jpg')">
+<header class="masthead" style="background-image: url('@Model.img')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="post-heading">
-                    <h1>Man must explore, and this is exploration at its greatest</h1>
-                    <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
-                    <span class="meta">
-                        Posted by
-                        <a href="#!">Start Bootstrap</a>
-                        on August 24, 2023
-                    </span>
+                    <h1>@Model.BigTitle</h1>
+                    <span class="subheading">@Model.SmallTitle</span>
                 </div>
             </div>
         </div>
