--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Header/Index.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Header/Index.cshtml
@@ -29,6 +29,11 @@
             <input type="text" class="form-control" name="Menu4" value="@Model.Menu4" required>
         </div>
 
+        <div class="form-group">
+            <label>MENU 5</label>
+            <input type="text" class="form-control" name="Menu5" value="@Model.Menu5" required>
+        </div>
+
       
         <button type="submit" class="btn btn-primary w-100">UPDATE</button>
     </form>
