--- a/Clean_Blog/Clean_Blog/Views/Shared/Components/HeaderList/Default.cshtml
+++ b/Clean_Blog/Clean_Blog/Views/Shared/Components/HeaderList/Default.cshtml
@@ -14,6 +14,7 @@
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/About">@Model.Menu2</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/Popular">@Model.Menu3 </a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/Contact">@Model.Menu4</a></li>
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/Login">@Model.Menu5</a></li>
             </ul>
         </div>
     </div>
