--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Home/Index.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Home/Index.cshtml
@@ -1,10 +1,13 @@
-﻿
-<!-- Begin Page Content -->
+﻿<!-- Begin Page Content -->
 <div class="container-fluid">
 
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+
+        <h1 class="h3 mb-0 text-gray-800">
+            Dashboard
+
+        </h1>
         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
             <i class="fas fa-download fa-sm text-white-50"></i> Generate Report
         </a>
@@ -12,7 +15,6 @@
 
     <!-- Content Row -->
     <div class="row">
-
         <!-- Earnings (Monthly) Card Example -->
         <div class="col-xl-3 col-md-6 mb-4">
             <div class="card border-left-primary shadow h-100 py-2">
