--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                             <a class="collapse-item" href="/Admin/Post">Show Post</a>
                             @if (User.IsInRole("SuperAdmin"))
                             {
-                            <a class="collapse-item" href="utilities-border.html">Show All Post</a>
+                                <a class="collapse-item" href="/admin/GetAllPost">Show All Post</a>
                             }
                         </div>
                     </div>
