--- a/Clean_Blog/Clean_Blog/Areas/Admin/Views/Post/Index.cshtml
+++ b/Clean_Blog/Clean_Blog/Areas/Admin/Views/Post/Index.cshtml
@@ -37,8 +37,8 @@
                                             <td>@(item.Description.Length > 20 ? item.Description.Substring(0, 20) : item.Description)...</td>
                                             <td>@item.CreatedDate.ToString("dd/MM/yyyy")</td>
                                             <td>
-                                                <a class="btn btn-danger">Delete</a>
-                                                <a class="btn btn-success">Update</a>
+                                                <a class="btn btn-danger" href="/Admin/PostDelete/@item.Id">Delete</a>
+                                                <a class="btn btn-success" href="/Admin/PostUpdate/@item.Id">Update</a>
                                             </td>
                                         </tr>
                                     }
